Fix alignment issues of labels

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #ffffff;
+    background-color: #fbf3f5;
 }
 
 #container {
@@ -40,5 +40,5 @@ button:hover {
     background-color: #a02464;
 }
 
-label { display: inline-block; width: 100px; text-align: right; }
+label { display: inline-block; width: 130px; text-align: right; }
 input { display : inline-block; width: 60px; text-align: right;}
